# Project_gmmreg

./: test.cc
C++/: CMakeLists.txt  fgt_utils.h  gmmreg_api.cpp  gmmreg_base.cpp  gmmreg_base.h  gmmreg_factory.cpp  gmmreg_rigid.cpp  gmmreg_rigid.h  gmmreg_rigid_func.cpp
C++/utils/: misc_utils.cc  normalization_utils.cc
C++/vxl-2.0.2/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  VXLConfig.cmake  VXLConfigVersion.cmake  VXLTargets.cmake  cmake_install.cmake  install_manifest.txt
Test/: open3Dtest.py  pcd2txt.py  v2.txt  v5.txt
cc/: CMakeLists.txt
data/dragon_stand/: CMakeCache.txt  dragonStandRight_0.ply  dragonStandRight_0.txt  dragonStandRight_120.txt  dragonStandRight_144.ply  dragonStandRight_144.txt  dragonStandRight_192.ply  dragonStandRight_216.txt  dragonStandRight_24.ply  dragonStandRight_24.txt  dragonStandRight_240.ply  dragonStandRight_240.txt  dragonStandRight_264.ply  dragonStandRight_264.txt  dragonStandRight_312.txt  dragonStandRight_336.ply  dragonStandRight_336.txt  dragonStandRight_360.txt  dragonStandRight_384.txt  dragonStandRight_408.ply  dragonStandRight_432.ply  dragonStandRight_432.txt  dragonStandRight_456.ply  dragonStandRight_456.txt  dragonStandRight_48.ply  dragonStandRight_48.txt  dragonStandRight_480.ply  dragonStandRight_480.txt  dragonStandRight_504.txt  dragonStandRight_528.ply  dragonStandRight_552.ply  dragonStandRight_552.txt  dragonStandRight_72.ply  dragonStandRight_72.txt  v11.ply  v12.ply  (+27 more)
expts/: common_utils.py  dragon_expts.py  dragon_stand.ini
expts/tmp/txt2pcd/: CMakeLists.txt  main.cpp
(+271 files in other folders)
